@@ -24,10 +24,11 @@ setup(name = 'gphotoframe',
       url = 'http://code.google.com/p/gphotoframe/',
       license = 'GPL3',
       package_dir = {'gphotoframe' : 'lib'},
-      packages = ['gphotoframe', 'gphotoframe.utils',
+      packages = ['gphotoframe', 'gphotoframe.utils', 'gphotoframe.dbus',
                   'gphotoframe.image', 'gphotoframe.image.actor',
                   'gphotoframe.preferences', 'gphotoframe.history',
                   'gphotoframe.plugins', 'gphotoframe.plugins.base',
+                  'gphotoframe.plugins.facebook',
                   'gphotoframe.plugins.flickr', 'gphotoframe.plugins.fspot'],
       scripts = ['gphotoframe'],
       data_files = [('share/gphotoframe', ['share/gphotoframe.ui',
