@@ -1,3 +1,7 @@
+2011-03-14  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>
+
+	* dbus/networkstate.py: Added checking for the networking state.
+
 2011-03-11  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>
 
 	* utils/checkinstalled.py: Added checking if the application
